--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="favicon.svg" type="image/svg+xml" />
-    <link rel="apple-touch-icon" href="pwa-192x192.png" />
+    <link rel="apple-touch-icon" href="favicon.svg" />
     <link rel="mask-icon" href="favicon.svg" color="#0f172a" />
     <meta name="msapplication-TileColor" content="#0f172a" />
     <meta name="theme-color" content="#0f172a" />
+    <link rel="manifest" href="manifest.webmanifest" />
 
     <meta name="title" content="SNOWCAM" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
