--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <link rel="mask-icon" href="favicon.svg" color="#0f172a" />
     <meta name="msapplication-TileColor" content="#0f172a" />
     <meta name="theme-color" content="#0f172a" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <link rel="apple-touch-icon" href="favicon.svg">
     <link rel="manifest" href="manifest.webmanifest" />
 
     <meta name="title" content="SNOWCAM" />
