--- a/index.html
+++ b/index.html
@@ -1,14 +1,11 @@
 <!doctype html>
-<html
-  lang="ru"
-  class="dark [--scroll-mt:9.875rem] lg:[--scroll-mt:6.3125rem] js-focus-visible"
->
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="favicon.svg" type="image/svg+xml" />
-    <link rel="apple-touch-icon" href="favicon.svg" />
-    <link rel="mask-icon" href="favicon.svg" color="#0f172a" />
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
+    <link rel="apple-touch-icon" href="/favicon.svg" />
+    <link rel="mask-icon" href="/favicon.svg" color="#0f172a" />
     <meta name="msapplication-TileColor" content="#0f172a" />
     <meta name="theme-color" content="#0f172a" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -17,22 +14,22 @@
       content="black-translucent"
     />
     <link rel="apple-touch-icon" href="/favicon.svg" />
-    <link rel="manifest" href="manifest.webmanifest" />
+    <link rel="manifest" href="/manifest.webmanifest" />
 
     <title>Chimbacam</title>
     <link
-      href="src/style.css"
+      href="/src/style.css"
       rel="preload"
       as="style"
       onload="this.rel='stylesheet'"
     />
-    <noscript><link rel="stylesheet" href="src/style.css" /></noscript>
+    <noscript><link rel="stylesheet" href="/src/style.css" /></noscript>
   </head>
 
   <body
     class="antialiased text-slate-500 dark:text-slate-400 bg-white dark:bg-slate-900"
   >
-    <div id="app" class="pwa-main"></div>
+    <div id="app"></div>
     <script type="module" src="src/main.js"></script>
   </body>
 </html>
