Вывод помощника для установки на homescreen

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0; viewport-fit=cover" />
     <meta name="theme-color" content="#0f172a" />
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -28,7 +28,7 @@
   </head>
 
   <body
-    class="antialiased text-slate-500 dark:text-slate-400 bg-white dark:bg-slate-900"
+    class="antialiased text-slate-400 bg-slate-900"
   >
     <div id="app"></div>
     <script type="module" src="src/main.js"></script>
