Add .env.example, update imports, and refactor components for Telegram Mini App

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     class="antialiased text-slate-400 bg-slate-900"
   >
     <div id="app"></div>
-    <script type="module" src="src/main.js"></script>
+    <script type="module" src="src/index.js"></script>
     <!-- Yandex.Metrika counter -->
     <script type="text/javascript" >
       (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
