--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="ru">
+<html lang="ru" translate="no">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
@@ -28,7 +28,7 @@
   </head>
 
   <body
-    class="antialiased text-slate-400 bg-slate-900"
+    class="antialiased text-slate-400 bg-slate-900 mt-14"
   >
     <div id="app"></div>
     <script type="module" src="src/index.js"></script>
