Refactor application structure and enhance functionality
- Removed unnecessary classes from `index.html` for cleaner markup.
- Eliminated unused Telegram script from `videowall.html`.
- Added `src/app.js` to centralize application creation and configuration.
- Updated `src/index.js` and `src/videowall.js` to utilize the new app factory function.
- Enhanced `Index.vue` and `VideoWall.vue` components with improved cache management and UI adjustments.
- Introduced elevation data for videos in `videos.js` to provide additional context.
- Updated various components to improve responsiveness and user interaction.

These changes streamline the application setup and improve overall user experience.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   </head>
 
   <body
-    class="antialiased text-slate-400 bg-slate-900 mt-14"
+    class="antialiased text-slate-400 bg-slate-900"
   >
     <div id="app"></div>
     <script type="module" src="src/index.js"></script>
